--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<head><title>priceline.com</title></head>
-<body></body>
+<head><title>priceline.com changed</title></head>
+<body>name any price</body>
 </html>
